# JNI-String-Bridge-Android-Cpp-Integration-Sample

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  libbigo_engine.h  nader.cpp
app/src/main/java/nademkhan/example/jnistringbridge/: MainActivity.java  RecorderService.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
